--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="open-sans-normal">
     <header>
-        <nav class="nav-container mx-width">
+        <nav class="nav-container ">
             <h1 class="dark1">La<span>h</span>if</h1>
             <ul>
                 <li>  <a class="dark2" href="">Protfolio</a></li>
@@ -21,6 +21,19 @@
             </ul>
 
         </nav>
+        <div class="banner-container mx-width ">
+                <div class="baner-content">
+                    <h3 class="banner-greeting dark2">Hi, I  am</h3>
+                    <h1 class="banner-owner">Lahif Khan</h1>
+                    <p class="dark2 banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                    <div class="banner-btn">
+                    <button class="primary-btn">Download Cv</button>
+                    <button class="secondary-btn">Contact</button>
+
+                    </div>
+                </div>
+                <img src="images/hardy.png" alt="developer" width="584" height="676">
+            </div>
     </header>
 </body>
 </html>
