About me section added

--- a/index.html
+++ b/index.html
@@ -35,5 +35,35 @@
                 <img src="images/hardy.png" alt="developer" width="584" height="676">
             </div>
     </header>
+
+    <main>
+        <section class="about-me mx-width">
+            <div class="about-me-content">
+                <h4 class="section-title">About Me</h4>
+            <p class="dark3 section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-me-items">
+                <div>
+                    <p class="item">Name</p>
+                    <p class="item-value dark2">Lahif Khan</p>
+                </div>
+                <div>
+                    <p class="item">Email</p>
+                    <p class="item-value dark2">lahifkhan52@gmail.com</p>
+                </div>
+                <div>
+                    <p class="item">Date of birth</p>
+                    <p class="item-value dark2">2 February 2002</p>
+                </div>
+                <div>
+                    <p class="item">From</p>
+                    <p class="item-value dark2">Netrakona,Mymensing</p>
+                </div>
+            </div>
+
+
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
