--- a/index.html
+++ b/index.html
@@ -64,6 +64,38 @@
             </div>
 
         </section>
+
+        <section class="skills-container mx-width">
+            <div class="skills-description">
+                <h4 class="section-title">What I do</h4>
+                <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+
+            <div class="skill-catagory">
+                <div class="skill-card">
+                    <img src="images/icons/js.png" alt="">
+                    <h5 class="skill-title dark1">Vanilla JavaScript</h5>
+                    <p class="skill-description dark3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/react.png" alt="">
+                    <h5 class="skill-title dark1">React</h5>
+                    <p class="skill-description dark3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h5 class="skill-title dark1">Node.js</h5>
+                    <p class="skill-description dark3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h5 class="skill-title dark1">MongoDB</h5>
+                    <p class="skill-description dark3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+
+        </section>
     </main>
 </body>
 </html>
