--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <script src="https://kit.fontawesome.com/caa2785214.js" crossorigin="anonymous"></script>
   </head>
   <body class="open-sans-normal">
     <header>
@@ -33,8 +34,8 @@
             he. Morning because as to society behaved moments.
           </p>
           <div class="banner-btn">
-            <button class="primary-btn">Download Cv</button>
-            <button class="secondary-btn">Contact</button>
+            <button class="primary-btn"><i class="fa-solid fa-download"></i> Download Cv</button>
+            <button class="secondary-btn"><i class="fa-solid fa-phone"></i>  Contact</button>
           </div>
         </div>
         <img src="images/hardy.png" alt="developer" width="584" height="676" />
@@ -219,7 +220,7 @@
         </div>
       </section>
       <div class="cv" >
-        <button class="primary-btn">Download Cv</button>
+        <button class="primary-btn"><i class="fa-solid fa-download"></i> Download Cv</button>
 
       </div>
       
