--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
         </ul>
       </nav>
-      <div class="banner-container mx-width">
+      <div class="banner-container ">
         <div class="baner-content">
           <h3 class="banner-greeting dark2">Hi, I am</h3>
           <h1 class="banner-owner">Lahif Khan</h1>
